--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=nile
+
+# Defining the database credentials
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL}
+
+# Setting the database driver
+spring.jpa.properties.hibernate.default_schema=public
+
+# Tell Spring JPA to log the SQL statements that it generates and executes
+spring.jpa.show-sql=true
+
+# Setting DDL to create during user testing
+spring.jpa.hibernate.ddl-auto=create
