Story ID 12: View All Reviews For One Item

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=nile
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_URL}
-
+spring.jpa.hibernate.ddl-auto=update
 # Setting the database driver
 spring.jpa.properties.hibernate.default_schema=public
 
