--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=nile
 
 # Defining the database credentials
-spring.datasource.username=${USERNAME}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_URL}
 
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.default_schema=public
 
 # Tell Spring JPA to log the SQL statements that it generates and executes
 spring.jpa.show-sql=true
+
+# Recreate the database schema every time the application starts
+spring.jpa.hibernate.ddl-auto=create
