--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=nile
 
 # Defining the database credentials
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+
 
 # Setting the database driver
 spring.jpa.properties.hibernate.default_schema=public
@@ -12,4 +13,4 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Recreate the database schema every time the application starts
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
