added email service. email and password need to be configured thru env variables. To send an email, call the EmailService sendEmail function with the to email, the subject, and the body as strings. We created a prepareCheckoutEmail method in EmailService that is intended to be called from the checkout method in userController with full User and Order objects retireved from their respective services so they have no empty fields, rather than the possibly incomplete objects passed by the HTTP request itself.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.jpa.show-sql=true
 
 # Recreate the database schema every time the application starts
 spring.jpa.hibernate.ddl-auto=create
+
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
