--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Recreate the database schema every time the application starts
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
