--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,10 +16,19 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 #Mail
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=rickslinger06@gmail.com
+#spring.mail.password=jpanxsnwvizrfdmb
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.auth=true
+
+#Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rickslinger06@gmail.com
-spring.mail.password=jpanxsnwvizrfdmb
+spring.mail.username=${EMAIL}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
