Database character types changed to allow for longer strings

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 
 # Recreate the database schema every time the application starts
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Mail
 spring.mail.host=smtp.gmail.com
