Updated links and database properties for deploy

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.default_schema=public
 # Tell Spring JPA to log the SQL statements that it generates and executes
 spring.jpa.show-sql=true
 
-# Recreate the database schema every time the application starts
-spring.jpa.hibernate.ddl-auto=create
+# Don't recreate the database schema every time the application starts
+spring.jpa.hibernate.ddl-auto=update
 
 # Mail
 spring.mail.host=smtp.gmail.com
