update environment variable

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # Path to Back End API - Change Once Deployed
-REACT_APP_API_URL = http://localhost:8080
+REACT_APP_API_URL = ec2-54-237-227-34.compute-1.amazonaws.com
